add additional Korean support, fix CSS

--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
 
         <div class="grade-choice" id="choice">
             <input type="radio" name="grade-type" id="percent" value="pct">
-            <label for="percent">Percent (%) Grade</label>
+            <label for="percent">퍼센트(%) 점수</label>
             <input type="radio" id="alpha" name="grade-type" value="alpha">
-            <label for="alpha">Alphabetical grade</label>
+            <label for="alpha">ABCDE 점수</label>
         </div>
 
 
@@ -117,10 +117,10 @@
 
         <div class="row">
             <div class="grade-row">
-                <input type="text" class="grade" placeholder="Grade" maxlength="3">
+                <input type="text" class="grade" placeholder="점수" maxlength="3">
                 <select class="credit">
-                    <option value="2">6 credits (1 full course) </option>
-                    <option value="1">3 credits (1 half course) </option>
+                    <option value="2">6 크레딧 = 1년</option>
+                    <option value="1">3 크레딧 = 1학기</option>
                 </select>
             </div>
         </div>
