--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>GPA 계산기</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
     <script src="script.js" defer></script>
 </head>
 <body>
