--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <footer>
         <p>GPA 계산은 <a href="https://www.ouac.on.ca/guide/omsas-conversion-table/">OUAC website</a>를 참조하였습니다.</p>
         <p><a href="https://www.flaticon.com/free-icons/grade" title="grade icons">Grade icons created by Flat Icons - Flaticon</a></p>
-        <p>이상오 2022 <a href="https://github.com/late-fall/gpa-calculator"><i class="fa fa-github fa_custom"></i></a></p>
+        <!-- <p>이상오 2022 <a href="https://github.com/late-fall/gpa-calculator"><i class="fa fa-github fa_custom"></i></a></p> -->
     </footer>
 </body>
 </html>
